<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="250dp"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="24dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/offer_food_iv"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/food_img_description"
            android:scaleType="fitXY"
            android:src="@drawable/burger_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/burger_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Beef Cheese Burger" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:contentDescription="@string/rating_icon"
                    android:src="@drawable/baseline_star_24"/>

                <TextView
                    android:id="@+id/review_and_rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/tools_rating_text"
                    android:textSize="12sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables"
                android:gravity="center_vertical"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/food_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tools_food_price_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/like_icon"
                    android:src="@drawable/favorite" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>