<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_only_corner_radius"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:padding="5dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/black_baseline_person_24"
                    android:background="@drawable/circle_bg"
                    android:scaleType="centerInside"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_adresse_title_tv"
                        android:paddingHorizontal="16dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_adresse"
                        android:paddingHorizontal="16dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_notifications_24"
                    android:background="@drawable/circle_bg"
                    android:scaleType="centerInside"/>



            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_header_question"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <com.google.android.material.search.SearchBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_categories_tv"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_activity_categories_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_activity_burger_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_for_you_tv"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_activity_for_you_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>


